Create IMC calculator

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img src="assets/images/to-do-500x315.png" class="card-img-top" alt="Lista de Afazeres">
                         <div class="card-body text-center">
                             <h5 class="card-title">To-Do</h5>
-                            <p class="card-text">Lista de Coisas a Fazer</p>
+                            <p class="card-text">HTML + CSS</p>
                             <a href="https://samuelasantos.github.io/Lista-To-Do/" class="btn btn-primary btn-custom" target="_blank">Clique para Visualizar</a>
                         </div>
                     </div>
@@ -55,8 +55,19 @@
                         <img src="assets/images/projetos_001_e_002.jpg" class="card-img-top" alt="Login">
                         <div class="card-body text-center">
                             <h5 class="card-title">Login + To-Do</h5>
-                            <p class="card-text">Unindo Projetos</p>
+                            <p class="card-text">Senha e Usuário = "admin"</p>
                             <a href="assets/templates/login.html" class="btn btn-primary btn-custom" target="_blank">Clique para Visualizar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-3 col-custom">
+                    <div class="card mt-3" style="max-width: 18rem;">
+                        <img src="assets/images/Calc_IMC.jpg" class="card-img-top" alt="Calculadora de IMC">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Calculadora de IMC</h5>
+                            <p class="card-text">Html + CSS + JS</p>
+                            <a href="assets/templates/imc.html" class="btn btn-primary btn-custom" target="_blank">Clique para Visualizar</a>
                         </div>
                     </div>
                 </div>
